--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
 - database.yaml
 - logbook.yaml
 - auth.yaml
-#- collab-listener.yaml
+- collab-listener.yaml
 
 configMapGenerator:
 - name: auth-config 
