--- a/kubernetes/overlays/prod/logbook-patches.yaml
+++ b/kubernetes/overlays/prod/logbook-patches.yaml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   name: explgbk
 spec:
-  replicas: 2
+  replicas: 1
   template:
     spec:
       containers:
@@ -17,7 +17,8 @@ spec:
           - name: NODE_ENV
             value: dev
           - name: MONGODB_URL
-            value: 'mongodb://mongo-0.mongo:27017,mongo-1.mongo:27017/?replicationSet=rs0'
+            value: 'mongodb://mongo-0.mongo:27017,mongo-1.mongo:27017,mongo-2.mongo:27017/?replicationSet=rs0'
           - name: KAFKA_BOOTSTRAP_SERVER
-            value: kafka:9092
+            #value: kafka:9092
+            value: kafka-0.kafka:9092
 
