--- a/kubernetes/overlays/prod/collab-listener-patches.yaml
+++ b/kubernetes/overlays/prod/collab-listener-patches.yaml
@@ -21,7 +21,7 @@ spec:
         imagePullPolicy: Always
         env:
         - name: KAFKA_BOOTSTRAP_SERVER
-          value: kafka:9092
+          value: kafka-kafka-bootstrap:9092
         - name: KAFKA_TOPIC
           value: roles
         - name: KAFKA_GROUP_ID
@@ -29,4 +29,4 @@ spec:
       volumes:
       - name: exp-data
         persistentVolumeClaim:
-          claimName: cryoem-logbook--sdf-exp
+          claimName: sdf-group-cryoem-exp
