--- a/kubernetes/overlays/prod/ingress.yaml
+++ b/kubernetes/overlays/prod/ingress.yaml
@@ -1,6 +1,6 @@
 ---
 
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: www
@@ -14,6 +14,9 @@ spec:
       http:
         paths:
         - path: /
+          pathType: Prefix
           backend:
-            serviceName: auth
-            servicePort: 443
+            service:
+              name: auth
+              port:
+                number: 443
