--- a/kubernetes/overlays/prod/logbook-patches.yaml
+++ b/kubernetes/overlays/prod/logbook-patches.yaml
@@ -15,10 +15,10 @@ spec:
           - name: URAWI_EXPERIMENT_LOOKUP_URL
             value: https://userportal.slac.stanford.edu/apps/urawi/ws/cryo_btsr_info
           - name: NODE_ENV
-            value: dev
+            value: prod
           - name: MONGODB_URL
-            value: 'mongodb://mongo-0.mongo:27017,mongo-1.mongo:27017,mongo-2.mongo:27017/?replicationSet=rs0'
+            value: 'mongodb://mongo-rs0-0.mongo-rs0:27017,mongo-rs0-1.mongo-rs0:27017,mongo-rs0-2.mongo-rs0:27017/?replicaSet=rs0'
+            #value: mongodb://mongo-mongos:27017
           - name: KAFKA_BOOTSTRAP_SERVER
-            #value: kafka:9092
-            value: kafka-0.kafka:9092
+            value: kafka-kafka-bootstrap:9092
 
