--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - mongo-database.yaml
 - kafka-messagebus.yaml
 - ingress.yaml
+- cryoem-storage.yaml
 
 patchesStrategicMerge:
 - auth-patches.yaml
